kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ad-operations
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ad-operations
  template:
    metadata:
      labels:
        app: ad-operations
    spec:
      containers:
        - name: ad-operations
          image: ad-operations:latest
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: "0.5"
              memory: 512Mi
            requests:
              cpu: "0.25"
              memory: 256Mi
          livenessProbe:
            httpGet:
              port: 5000
              path: /
            initialDelaySeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              port: 5000
              path: /
            initialDelaySeconds: 10
          volumeMounts:
            - mountPath: /etc/localtime
              name: localtime
            - mountPath: /app/logs
              name: ad-operations
              subPath: logs
      volumes:
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
        - name: ad-operations
          persistentVolumeClaim:
            claimName: ad-operations
---
apiVersion: v1
kind: Service
metadata:
  name: ad-operations
  namespace: tools
  labels:
    app: ad-operations
spec:
  selector:
    app: ad-operations
  type: ClusterIP
  ports:
    - port: 5000
      name: web
      targetPort: 5000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ad-operations
  namespace: tools
  labels:
    app: ad-operations
spec:
  ingressClassName: nginx
  rules:
  - host: ad-operations.domain.com
    http:
      paths:
      - backend:
          service:
            name: ad-operations
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ad-operations.domain.com
    secretName: domain-tls
